# ChangeLog for dev-util/subversion
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.306 2008/05/20 15:32:58 fmccor Exp $

  20 May 2008; Ferris McCormick <fmccor@gentoo.org>
  subversion-1.5.0_rc5.ebuild:
  Restore ~sparc keyword, Bug #219882.

  17 May 2008; Jeroen Roovers <jer@gentoo.org> subversion-1.5.0_rc5.ebuild:
  Marked ~hppa (bug #219882).

  12 May 2008; Raúl Porcel <armin76@gentoo.org>
  subversion-1.5.0_rc5.ebuild:
  Readd ~alpha/~ia64 wrt #219882

  11 May 2008; Markus Rothe <corsair@gentoo.org>
  subversion-1.5.0_rc5.ebuild:
  Added ~ppc64; bug #219882

*subversion-1.5.0_rc5 (07 May 2008)

  07 May 2008; Benedikt Böhm <hollow@gentoo.org>
  +subversion-1.5.0_rc5.ebuild:
  version bump wrt #220793

  01 May 2008; Benedikt Böhm <hollow@gentoo.org>
  subversion-1.5.0_rc4.ebuild:
  serf and neon can be used at the same time; fix libtool 2.2 support

  01 May 2008; Benedikt Böhm <hollow@gentoo.org>
  subversion-1.5.0_rc4.ebuild:
  do not inherit subversion

*subversion-1.5.0_rc4 (30 Apr 2008)

  30 Apr 2008; Benedikt Böhm <hollow@gentoo.org>
  +files/1.5.0/70svn-gentoo.el, +files/1.5.0/80subversion-extras,
  +files/1.5.0/disable-unneeded-linking.patch, +subversion-1.5.0_rc4.ebuild:
  version bump wrt #219395

  13 Apr 2008; Benedikt Böhm <hollow@gentoo.org> subversion-1.4.5.ebuild,
  subversion-1.4.6.ebuild, subversion-1.4.6-r2.ebuild:
  fix neon DEPEND and sed

  10 Apr 2008; Benedikt Böhm <hollow@gentoo.org> subversion-1.4.6.ebuild,
  -subversion-1.4.6-r1.ebuild, subversion-1.4.6-r2.ebuild:
  fix #216992

*subversion-1.4.6-r2 (22 Mar 2008)

  22 Mar 2008; Benedikt Böhm <hollow@gentoo.org>
  files/subversion-1.1.1-perl-vendor.patch,
  files/subversion-1.4.6-neon-0.28.patch, files/subversion-1.4-db4.patch,
  files/subversion-1.4.3-debug-config.patch,
  files/subversion-apr_cppflags.patch,
  files/subversion-hotbackup-config.patch, +subversion-1.4.6-r2.ebuild: