@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.4.6-r2.ebuild,v 1.3 2008/04/13 16:49:23 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.4.6-r2.ebuild,v 1.4 2008/06/01 10:16:08 hollow Exp $
 
 EAPI="prefix"
 
@@ -19,7 +19,6 @@ RESTRICT="test"
 
 COMMONDEPEND=">=dev-libs/apr-util-1.2.8
 			berkdb? ( =sys-libs/db-4* )
-			doc? ( app-doc/doxygen )
 			emacs? ( virtual/emacs )
 			nls? ( sys-devel/gettext )
 			!nowebdav? ( >=net-misc/neon-0.26.4 )
@@ -33,6 +32,7 @@ RDEPEND="${COMMONDEPEND}
 
 DEPEND="${COMMONDEPEND}
 		>=sys-devel/autoconf-2.59
+		doc? ( app-doc/doxygen )
 		java? ( >=virtual/jdk-1.4 )
 		ruby? ( dev-lang/swig )
 		perl? ( dev-lang/swig )
