@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.5.0_rc5.ebuild,v 1.5 2008/05/20 15:32:58 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.5.0_rc5.ebuild,v 1.6 2008/06/01 10:16:08 hollow Exp $
 
 EAPI="prefix 1"
 
@@ -21,7 +21,6 @@ CDEPEND=">=dev-libs/apr-1.2.8
 	dev-libs/expat
 	sys-libs/zlib
 	berkdb? ( =sys-libs/db-4* )
-	doc? ( app-doc/doxygen )
 	emacs? ( virtual/emacs )
 	ruby? ( >=dev-lang/ruby-1.8.2 )
 	sasl? ( dev-libs/cyrus-sasl )
@@ -34,6 +33,7 @@ RDEPEND="${CDEPEND}
 	perl? ( dev-perl/URI )"
 
 DEPEND="${CDEPEND}
+	doc? ( app-doc/doxygen )
 	java? ( >=virtual/jdk-1.5 )
 	nls? ( sys-devel/gettext )"
 
