@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.306 2008/05/20 15:32:58 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.307 2008/06/01 10:16:08 hollow Exp $
+
+  01 Jun 2008; Benedikt Böhm <hollow@gentoo.org> metadata.xml,
+  subversion-1.4.5.ebuild, subversion-1.4.6.ebuild,
+  subversion-1.4.6-r2.ebuild, -subversion-1.5.0_rc4.ebuild,
+  subversion-1.5.0_rc5.ebuild:
+  fix #221673
 
   20 May 2008; Ferris McCormick <fmccor@gentoo.org>
   subversion-1.5.0_rc5.ebuild:
